Reorganiza crud en escuela, main

--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -17,23 +17,29 @@
 
                 <li><a><img src="/static/img/cursos_blanco.png" width="27px" style="margin: 0.3em 0.6em 0.6em 0.6em"> Cursos
                     <span class="fa fa-chevron-down"></span></a>
-                    <ul class="nav child_menu">
-                        <li><a href="tables.html">Tables</a></li>
-                        <li><a href="tables_dynamic.html">Table Dynamic</a></li>
+                     <ul class="nav child_menu">
+                        <li><a href="/escuela/clases">Listar Clases</a></li>
+                        <li><a href="/escuela/clases/new">Crear Nueva Clase</a></li>
+                         <li><a href="/escuela/grupos">Listar Grupos</a></li>
+                         <li><a href="/escuela/grupos/new">Crear Nuevo Grupo</a></li>
+                         <li><a href="/">Crear Horarios</a></li>
+                         <li><a href="/">Crear Etiquetas</a></li>
                     </ul>
                 </li>
                 <li><a><img src="/static/img/alumnos_blanco.png" width="27px" style="margin: 0.3em 0.6em 0.6em 0.6em">
                     Alumnos <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="/alumnos/">Listar</a></li>
-                        <li><a href="/alumnos/new">Nuevo Alumno</a></li>
+                        <li><a href="/">Listar Alumnos</a></li>
+                        <li><a href="/">Crear Nuevo Alumno</a></li>
+                        <li><a href="/">Crear Titular</a></li>
+
                     </ul>
                 </li>
                 <li><a><img src="/static/img/profesores_blanco.png" width="27px" style="margin: 0.3em 0.6em 0.6em 0.6em">
                     Profesores <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="/profesores/">Listar</a></li>
-                        <li><a href="/profesores/new">Nuevo Profesor</a></li>
+                        <li><a href="/staff/">Listar Profesores</a></li>
+                        <li><a href="/staff/new">Crear Nuevo Profesor</a></li>
 
                     </ul>
                 </li>
@@ -54,11 +60,8 @@
                 <li><a><img src="/static/img/asistencia_blanco.png" width="27px" style="margin: 0.3em 0.6em 0.6em 0.6em">
                     Asistencia <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="chartjs.html">Chart JS</a></li>
-                        <li><a href="chartjs2.html">Chart JS2</a></li>
-                        <li><a href="morisjs.html">Moris JS</a></li>
-                        <li><a href="echarts.html">ECharts</a></li>
-                        <li><a href="other_charts.html">Other Charts</a></li>
+                        <li><a href="/">Consultar Asistencia</a></li>
+                        <li><a href="/">Ingresar Asistencia</a></li>
                     </ul>
                 </li>
 
