--- a/src/main/templates/forms/form.html
+++ b/src/main/templates/forms/form.html
@@ -1,11 +1,14 @@
 {% load field_type  %}
-
+{{ form }}
 {{ form.non_field_errors }}
 {% for field in form %}
+    {{ field|field_type }}
     {% if field|field_type == 'ImageField' or field|field_type == 'FileField'  %}
         {% include "forms/imagefilefield.html" with field=field %}
     {% elif field|field_type == 'DateField' %}
         {% include "forms/datefield.html" with field=field %}
+    {% elif field|field_type == 'IntegerField' %}
+        {% include "forms/integerfield.html" with field=field %}
     {% else %}
         {% include "forms/charfield.html" with field=field %}
     {% endif %}
