--- a/src/main/templates/base.html
+++ b/src/main/templates/base.html
@@ -34,6 +34,7 @@
                 <link href="/static/vendors/pnotify/dist/pnotify.css" rel="stylesheet">
                 <link href="/static/vendors/pnotify/dist/pnotify.buttons.css" rel="stylesheet">
                 <link href="/static/vendors/pnotify/dist/pnotify.nonblock.css" rel="stylesheet">
+                <link href="/static/vendors/jQuery-Smart-Wizard/styles/smart_wizard.css" rel="stylesheet">
             {% endblock stylesheets %}
 
             <!-- Custom Theme Style -->
@@ -80,6 +81,7 @@
             {% block javascripts %}
                 <!-- jQuery -->
                 <script src="/static/vendors/jquery/dist/jquery.min.js"></script>
+                <script src="/static/vendors/jQuery-Smart-Wizard/js/jquery.smartWizard.js"></script>
                 <!-- Bootstrap -->
                 <script src="/static/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
                 <!-- FastClick -->
