--- a/src/main/templates/forms/form.html
+++ b/src/main/templates/forms/form.html
@@ -17,6 +17,9 @@
         {% else %}
             {% include "forms/charfield.html" with field=field %}
         {% endif %}
+            <div class="feedback-message">
+
+            </div>
         </div>
     </div>
 {% endfor %}
