Agrega urls al menu

--- a/src/escuela/templates/dia_horas.html
+++ b/src/escuela/templates/dia_horas.html
@@ -8,7 +8,7 @@
         <div class="title_right">
             <div class="col-md-5 col-sm-5 col-xs-12 pull-right top_search">
 
-                    <a class="btn btn-primary pull-right" href="/dias_horas/new"><i  class="fa fa-plus-square"></i> NUEVO DIA-HORA</a>
+                    <a class="btn btn-primary pull-right" href="/horario/new"><i  class="fa fa-plus-square"></i> NUEVO DIA-HORA</a>
 
                 </div>
             </div>
