--- a/src/escuela/templates/grupos.html
+++ b/src/escuela/templates/grupos.html
@@ -32,6 +32,7 @@
                             <thead>
                             <tr>
                                 <th>id_clase</th>
+                                <th>descripcion</th>
                                 <th>id_profesor</th>
                                 <th>cupo_maximo</th>
                                 <th>costo</th>
