--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -22,24 +22,25 @@
                         <li><a href="/escuela/clases/new">Crear Nueva Clase</a></li>
                          <li><a href="/escuela/grupos">Listar Grupos</a></li>
                          <li><a href="/escuela/grupos/new">Crear Nuevo Grupo</a></li>
-                         <li><a href="/">Crear Horarios</a></li>
-                         <li><a href="/">Crear Etiquetas</a></li>
+                         <li><a href="/escuela/horario">Listar Horarios</a></li>
+                         <li><a href="/escuela/horario/new">Crear Horarios</a></li>
+                         <li><a href="/escuela/etiqueta/new">Crear Etiquetas</a></li>
                     </ul>
                 </li>
                 <li><a><img src="/static/img/alumnos_blanco.png" width="27px" style="margin: 0.3em 0.6em 0.6em 0.6em">
                     Alumnos <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="/">Listar Alumnos</a></li>
-                        <li><a href="/">Crear Nuevo Alumno</a></li>
-                        <li><a href="/">Crear Titular</a></li>
+                        <li><a href="/alumnos">Listar Alumnos</a></li>
+                        <li><a href="/alumnos/new">Crear Nuevo Alumno</a></li>
+                        <li><a href="/titulares/new">Crear Titular</a></li>
 
                     </ul>
                 </li>
                 <li><a><img src="/static/img/profesores_blanco.png" width="27px" style="margin: 0.3em 0.6em 0.6em 0.6em">
                     Profesores <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="/staff/">Listar Profesores</a></li>
-                        <li><a href="/staff/new">Crear Nuevo Profesor</a></li>
+                        <li><a href="/profesores">Listar Profesores</a></li>
+                        <li><a href="/profesores/new">Crear Nuevo Profesor</a></li>
 
                     </ul>
                 </li>
@@ -60,8 +61,8 @@
                 <li><a><img src="/static/img/asistencia_blanco.png" width="27px" style="margin: 0.3em 0.6em 0.6em 0.6em">
                     Asistencia <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="/">Consultar Asistencia</a></li>
-                        <li><a href="/">Ingresar Asistencia</a></li>
+                        <li><a href="/escuela/asistencia">Consultar Asistencia</a></li>
+                        <li><a href="/escuela/asistencia/new">Ingresar Asistencia</a></li>
                     </ul>
                 </li>
 
